# underdog

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: app.js  index.html  styles.css
docs/data/: index.json
docs/data/runs/: 2026-04-16.json  2026-04-17_07-28.json
underdog/: __init__.py  agent.py  llm.py  log.py  main.py  state.py  tools.py  writer.py
