[project]
name = "underdog"
version = "0.1.0"
description = "The Underdog — a local agent that hunts for AI-powered game dev tools"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2.50",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "feedparser>=6.0.11",
    "python-dotenv>=1.0.1",
    "rich>=13.7.0",
]

[project.scripts]
underdog = "underdog.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["underdog*"]
